# tei-rapporteur

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  clippy.toml  pyproject.toml  review.txt
.github/workflows/: ci.yml
chutoro-core/: Cargo.toml
chutoro-core/src/: datasource.rs  lib.rs
chutoro-core/src/hnsw/: graph.rs  insert.rs  mod.rs  node.rs  search.rs  tests.rs  types.rs
docs/: chutoro-design.md  roadmap.md  rstest-bdd-users-guide.md  tei-rapporteur-design-document.md  users-guide.md  workspace-layout.md
python/tests/: test_teipy_document.py
scripts/: _vault_commands.py
src/: lib.rs
tei-core/: Cargo.toml
tei-core/src/: lib.rs  text.rs  title.rs
tei-core/src/header/: encoding.rs  file.rs  mod.rs  profile.rs  revision.rs
tei-core/src/text/: inline.rs  mod.rs  types.rs
tei-core/src/text/body/: error.rs  mod.rs  paragraph.rs  utterance.rs  validation.rs
tei-core/tests/: body_behaviour.rs  header_behaviour.rs
tei-core/tests/features/: body.feature  header.feature
tei-core/tests/header_behaviour/: fixtures.rs  helpers.rs  mod.rs  state.rs
tei-core/tests/header_behaviour/steps/: given.rs  mod.rs  then.rs  when.rs
tei-py/: Cargo.toml  build.rs
tei-py/src/: lib.rs
tei-py/tests/: python_module.rs
tei-py/tests/features/: python_module.feature
tei-test-helpers/: Cargo.toml
tei-test-helpers/src/: lib.rs
tei-xml/: Cargo.toml
tei-xml/src/: lib.rs
tei-xml/tests/: emit_xml.rs  parse_xml.rs  round_trip.rs  title_serialisation.rs  title_serialization.rs
tei-xml/tests/features/: emit_xml.feature  parse_xml.feature  title_serialisation.feature  title_serialization.feature
