[package]
name = "tei-py"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
tei-core = { path = "../tei-core" }
tei-xml = { path = "../tei-xml" }
pyo3 = { version = "0.22.6", features = ["extension-module", "auto-initialize"] }

[dev-dependencies]
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
anyhow = { workspace = true }
tei-test-helpers = { path = "../tei-test-helpers" }

[build-dependencies]
pyo3-build-config = { version = "0.22.6", features = ["resolve-config"] }
