[package]
name = "tei-xml"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
tei-core = { path = "../tei-core" }
quick-xml = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
tei-test-helpers = { path = "../tei-test-helpers" }
serde = { workspace = true }
